examples/gatekeeper/duplicate-vpc/suite.yaml
kind: Suite
apiVersion: test.gatekeeper.sh/v1alpha1
metadata:
  name: block-duplicate-vpc-names
tests:
- name: block-duplicate-vpc-names
  template: template.yaml
  constraint: samples/constraint.yaml
  cases:
  - name: have duplicate name
    object: samples/duplicate-name-full.yaml
    inventory:
    - samples/duplicate-name-data.yaml # This contains a sample to mock an already existing object
    assertions:
    - violations: yes
  - name: allowed unique names
    object: samples/allowed-unique.yaml
    inventory:
    - samples/allowed-data.yaml # This contains a sample to mock an already existing object
    assertions:
    - violations: no
